syntax ="proto3";

package sec07;


option java_multiple_files= true;
option java_package ="org.example.models.sec07";

message Output{
  int32 value =1;
}

message RequestSize{
  int32 size =1;
}
service FlowControlService{
  rpc GetMessages(stream RequestSize) returns (stream Output);
}